# check_rgb

./: Cargo.toml  README.md  check_rgb.py
src/: main.rs
