[package]
name = "check_rgb"
version = "0.1.0"
authors = ["naparuba"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
ical = "0.7.*"
chrono = "*"
iso8601="*"
