[package]
name = "check_rgb"
version = "0.1.0"
authors = ["naparuba"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }  # updated: Sept 2022
ical = "0.7.0"      # updated: Sept 2022
chrono = "0.4.22"   # updated: Sept 2022
iso8601 = "0.5.0"   # updated: sept 2022
